syntax = "proto3";
option go_package = ".;proto";
import "global.proto";
import "message/shop.proto";


// 商店服务
service ShopService {
    /** 获取店铺,shopId */
    rpc GetShop (Int64) returns (SShop) {
    }
    /** 获取商户的店铺,vendorId */
    rpc GetVendorShop (Int64) returns (SShop) {
    }
    /** 获取门店,storeId */
    rpc GetStore (Int64) returns (SStore) {
    }
    /** 根据主机头获取店铺编号,host */
    rpc QueryShopByHost (String) returns (Int64) {
    }
    // 获取门店
    //rpc GetOfflineShop(1:sint32 shopId)returns(Shop)
    // 打开或关闭商店
    rpc TurnShop (TurnShopRequest) returns (Result) {
    }
    // 保存门店
    rpc SaveShop(SShop) returns (Result) {
    }
    // 保存门店
    rpc SaveOfflineShop(SStore)returns(Result) {
    }
    // 删除商店
    rpc DeleteStore(ShopId)returns(Result) {
    }
}

message TurnShopRequest {
    sint64 shopId = 1;
    bool on = 2;
    string reason = 3;
}